updated api docs, small fixes
